fix: error screen img overflow

--- a/src/Styles/Error.css
+++ b/src/Styles/Error.css
@@ -71,3 +71,8 @@
         font-size: 1rem;
     }
 }
+@media (max-width:500px){
+    .error img{
+        scale: .7;
+    }
+}
